# scivianna_vtk

./: .gitignore  AGENT.md  README.md  VTKCone.bundle.js  VTKPlotter.bundle.js  compile.ps1  compile.sh  example.py  package-lock.json  package.json  plotter.py  pyproject.toml  vtk_viewer copy.py  vtk_viewer.py
.github/workflows/: tests.yml
scivianna_vtk/: VTKPlotter.bundle.js  __init__.py  example.py  plotter.py
src/: app copy.js  app.js
tests/: test_example.py
utils/: .gitignore  up_version.ps1  up_version.sh
vtk_panel/: VTKPlotter.bundle.js  example.py  plotter.py  vtk_viewer.py
