[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scivianna-vtk"
version = "0.1.0"
description = "Interactive VTK/PyVista visualization with vtk.js for Panel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "panel>=1.4.0",
    "param>=2.0.0",
    "numpy>=1.24.0",
    "pyvista>=0.43.0",
    "vtk>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "panel-material-ui>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scivianna_vtk*"]

[tool.setuptools.package-data]
scivianna_vtk = ["*.js"]